--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-logger": "^2.0.0",
     "koa-router": "^7.0.0",
     "koa-static": "^4.0.1",
+    "lodash": "^4.17.4",
     "mongoose": "^4.4.3"
   },
   "devDependencies": {
