--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "koa-rest sample",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server/ --exec babel-node",
+    "start": "nodemon --inspect server/ --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
