--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-    "presets": ["es2015"],
-    "plugins": ["transform-async-to-generator","syntax-async-functions","add-module-exports"]
-  }
-  
+  "presets": [
+    "es2015"
+  ],
+  "plugins": [
+    "transform-async-to-generator",
+    "syntax-async-functions",
+    "add-module-exports",
+    "transform-runtime"
+  ]
+}
