--- a/package.json
+++ b/package.json
@@ -49,11 +49,17 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-register": "^6.3.13",
     "chai": "^3.5.0",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "nodemon": "^1.8.1",
     "should": "^11.1.2",
     "supertest": "^2.0.1"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
